# Cpp-Adventure-2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  map.txt
map/: drops.txt  objects.txt  sprites.txt
src/: Makefile  dirt_tile.cpp  dirt_tile.h  engine_interface.h  game_context.cpp  game_context.h  game_engine.cpp  game_engine.h  game_renderer.cpp  game_renderer.h  grass_tile.cpp  grass_tile.h  input_event.h  input_handler.cpp  input_handler.h  interact_interface.h  interact_request.h  inventory.cpp  inventory.h  main.cpp  map.cpp  map.h  player_sprite.cpp  player_sprite.h  sprite.cpp  sprite.h  sprite_model.cpp  sprite_model.h  spritesheet.cpp  spritesheet.h  stone_tile.cpp  stone_tile.h  texture_cache.cpp  texture_cache.h  texture_id.cpp  texture_id.h  tile.cpp  tile.h  tile_factory.cpp  tile_factory.h  (+4 more)
src/actions/: action.cpp  action.h  follow_action.cpp  follow_action.h  idle_action.cpp  idle_action.h  patrol_action.cpp  patrol_action.h  wander_action.cpp  wander_action.h
src/drops/: drop.cpp  drop.h
src/engine/: direction.h  engine_interface.h  engine_requests.h  game_engine.cpp  game_engine.h  input_event.h  input_handler.cpp  input_handler.h  map.cpp  map.h  sprite_model.cpp  sprite_model.h  spritesheet.h  texture_cache.cpp  texture_id.cpp  texture_id.h  update_context.cpp  update_context.h  util.cpp  util.h
src/items/: gravel_item.cpp  gravel_item.h  interact_type.h  item.cpp  item.h  item_factory.cpp  item_factory.h  item_type.h  pickaxe_item.cpp  pickaxe_item.h
src/models/: model_factory.cpp  model_factory.h  sprite_model.cpp  sprite_model.h
src/objects/: map_object.cpp  map_object.h  object_factory.cpp  object_factory.h  object_type.h  rock_object.cpp  rock_object.h
src/sprites/: actor.cpp  actor.h  actor_factory.cpp  actor_factory.h  friendly_sprite.cpp  friendly_sprite.h  npc_actor.cpp  npc_actor.h  player_actor.cpp  player_actor.h  player_sprite.cpp  player_sprite.h  sprite.cpp  sprite.h  sprite_factory.cpp  sprite_factory.h  sprite_type.h  test_sprite.cpp  test_sprite.h
src/tiles/: dirt_tile.cpp  dirt_tile.h  grass_tile.cpp  grass_tile.h  sand_tile.cpp  sand_tile.h  stone_tile.cpp  stone_tile.h  tile.cpp  tile.h  tile_factory.cpp  tile_factory.h  tile_type.cpp  tile_type.h
test/: CMakeLists.txt  run_tests.cpp
